--- a/frontend/components/Header/header.module.css
+++ b/frontend/components/Header/header.module.css
@@ -1,7 +1,7 @@
 .wrapper {
+  padding-top: 20px;
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 15px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
